# video_taker

./: .gitignore  README.md  api.py  capturador.py  config.py  main.py  pyproject.toml
reportes/: captura_20250509_104029.json  captura_20250509_104847.json  captura_20250509_112853.json  captura_20250509_113046.json  captura_20250509_113226.json  captura_20250509_113349.json  captura_20250509_115634.json
