[tool.poetry]
name = "video-taker-app"
version = "0.1.0"
description = ""
authors = ["Damian Olivas <damiangof2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.8.0"
requests = "^2.31.0"
numpy = "^1.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
